err/fox.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/biplist'...
Listing './lib/python3.5/site-packages/biplist-0.6.egg-info'...
Listing './lib/python3.5/site-packages/fox'...
Compiling './lib/python3.5/site-packages/fox/cli.py'...
***   File "./lib/python3.5/site-packages/fox/cli.py", line 30
    print "Using presets:"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/fox/helpers.py'...
***   File "./lib/python3.5/site-packages/fox/helpers.py", line 33
    print "Process exited with non-zero status " + str(p.returncode)
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fox/ipa.py'...
***   File "./lib/python3.5/site-packages/fox/ipa.py", line 124
    print "couldn't find profile"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/fox-0.1.10.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/provtool'...
Listing './lib/python3.5/site-packages/provtool-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/toml-0.8.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
